--- a/templates/src/pages/sandbox/success.astro
+++ b/templates/src/pages/sandbox/success.astro
@@ -22,12 +22,7 @@ const brandConfig = await getBrandConfig('default');
 const title = 'Registration Successful | TractStack';
 ---
 
-<Layout
-  title={title}
-  description="TractStack tenant registration successful"
-  slug="tenant-success"
-  brandConfig={brandConfig}
->
+<Layout title={title} slug="tenant-success" brandConfig={brandConfig}>
   <main
     id="main-content"
     class="flex min-h-screen items-center justify-center bg-gray-50"
