--- a/templates/src/pages/maint.astro
+++ b/templates/src/pages/maint.astro
@@ -105,7 +105,7 @@ const wordmark = `${brandBasePath}/wordmark.svg`;
       </div>
     </div>
 
-    <script define:vars={{ goBackend, tenantId, originalUrl }}>
+    <script is:inline define:vars={{ goBackend, tenantId, originalUrl }}>
       let checkCount = 0;
       const maxChecks = 240;
 
