--- a/templates/src/pages/storykeep/profile.astro
+++ b/templates/src/pages/storykeep/profile.astro
@@ -14,10 +14,7 @@ const config = {
 
 <Layout
   title={config.title}
-  description={config.description}
   slug="profile"
-  menuId={null}
-  created={null}
   isContext={false}
   isStoryKeep={false}
   isEditable={false}
@@ -35,9 +32,7 @@ const config = {
             your device.
           </p>
 
-          <h3
-            class="inline-flex items-center pt-12 text-sm text-xl text-gray-700"
-          >
+          <h3 class="inline-flex items-center pt-12 text-xl text-gray-700">
             Allow Tract Stack to retain memory of your session and preferences
             <span
               class="pl-2 text-gray-400"
