--- a/templates/src/pages/context/[...contextSlug].astro
+++ b/templates/src/pages/context/[...contextSlug].astro
@@ -1,8 +1,7 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 import CodeHook from '@/custom/CodeHook.astro';
-
-import { getBrandConfig } from '@/stores/brand';
+import { getBrandConfig } from '@/utils/api/brandConfig';
 import { handleFailedResponse } from '@/utils/backend';
 import { getFullContentMap } from '@/stores/analytics';
 
