--- a/templates/src/pages/sandbox/register.astro
+++ b/templates/src/pages/sandbox/register.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 import RegistrationForm from '@/components/tenant/RegistrationForm';
-import { getBrandConfig } from '@/stores/brand';
+import { getBrandConfig } from '@/utils/api/brandConfig';
 import { checkBackendHealth } from '@/utils/backend';
 
 // Check if multi-tenant is enabled
