--- a/templates/src/pages/sandbox/success.astro
+++ b/templates/src/pages/sandbox/success.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import { getBrandConfig } from '@/stores/brand';
+import { getBrandConfig } from '@/utils/api/brandConfig';
 
 // Check if multi-tenant is enabled
 const isMultiTenantEnabled =
