--- a/templates/src/pages/sandbox/activate.astro
+++ b/templates/src/pages/sandbox/activate.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import { getBrandConfig } from '@/stores/brand';
+import { getBrandConfig } from '@/utils/api/brandConfig';
 import { checkBackendHealth } from '@/utils/backend';
 
 // Get backend URL
