--- a/templates/src/pages/media/[...slug].astro
+++ b/templates/src/pages/media/[...slug].astro
@@ -2,6 +2,12 @@
 import { promises as fs } from 'node:fs';
 import path from 'node:path';
 
+// DO NOT USE IN PRODUCTION !!!
+// this is a stop-gap for dev testing ...
+
+// configure nginx to serve files on /media !!
+// see the docs
+
 export const prerender = false;
 
 const MIME_TYPES: Record<string, string> = {
@@ -34,6 +40,8 @@ if (!baseServerPath) {
   return new Response('Server configuration error', { status: 500 });
 }
 
+if (!slug) throw new Error(`Invalid path for tenant "${tenant}".`);
+
 try {
   // Construct the file path using the correct tenant ID
   const fullPath = path.join(baseServerPath, 'config', tenant, 'media', slug);
@@ -53,9 +61,7 @@ try {
     headers: { 'Content-Type': mimeType },
   });
 } catch (error) {
-  console.error(
-    `Could not serve media file: ${slug} for tenant ${tenant}. Error: ${error.message}`
-  );
+  console.error(`Could not serve media file: ${slug} for tenant ${tenant}.`);
   return new Response(null, { status: 404, statusText: 'Not Found' });
 }
 ---
