consistent isStoryKeep flag

--- a/templates/src/pages/[...slug]/edit.astro
+++ b/templates/src/pages/[...slug]/edit.astro
@@ -140,6 +140,7 @@ for (const [key, value] of Astro.url.searchParams) {
   ogImage={ogImage}
   brandConfig={brandConfig}
   storyfragmentId={storyFragmentID}
+  isStoryKeep={true}
   isEditor={true}
 >
   <!-- Standard Header (scrollable) -->
