--- a/templates/src/pages/context/[...contextSlug]/edit.astro
+++ b/templates/src/pages/context/[...contextSlug]/edit.astro
@@ -131,6 +131,7 @@ for (const [key, value] of Astro.url.searchParams) {
   ogImage={ogImage}
   brandConfig={brandConfig}
   storyfragmentId={contextPaneID}
+  isStoryKeep={true}
   isEditor={true}
 >
   <!-- Standard Header (scrollable) -->
