--- a/templates/src/pages/storykeep/branding.astro
+++ b/templates/src/pages/storykeep/branding.astro
@@ -41,7 +41,7 @@ try {
 }
 ---
 
-<Layout title={title} slug="storykeep">
+<Layout title={title} slug="storykeep" isStoryKeep={true}>
   <main id="main-content" class="min-h-screen w-full">
     <div class="p-8">
       <BrandingPageWrapper
