--- a/templates/src/pages/storykeep/profile.astro
+++ b/templates/src/pages/storykeep/profile.astro
@@ -22,7 +22,7 @@ const config = {
   title={config.title}
   slug="profile"
   isContext={false}
-  isStoryKeep={false}
+  isStoryKeep={true}
   isEditable={false}
 >
   <main id="main-content">
