--- a/templates/src/pages/[...slug].astro
+++ b/templates/src/pages/[...slug].astro
@@ -116,7 +116,7 @@ if (!brandConfig.SITE_INIT) {
   impressions={storyData.impressions || []}
   storyfragmentId={storyfragmentId}
 >
-  <main id="main-content" class="min-h-screen w-full">
+  <main id="main-content" class="w-full">
     <div class="panes-container">
       {
         paneIds.map((paneId: string) => (
