--- a/templates/src/pages/context/[...contextSlug].astro
+++ b/templates/src/pages/context/[...contextSlug].astro
@@ -112,7 +112,7 @@ if (!brandConfig.SITE_INIT) {
   brandConfig={brandConfig}
   storyfragmentId={paneId}
 >
-  <main id="main-content" class="min-h-screen w-full">
+  <main id="main-content" class="w-full">
     <div
       id={`pane-${paneId}`}
       data-pane-id={paneId}
