--- a/templates/src/components/Footer.astro
+++ b/templates/src/components/Footer.astro
@@ -176,7 +176,7 @@ const createdDate = created ? new Date(created) : new Date();
         >
           Tract Stack</a
         >
-        &ndash; no-code community engine from{` `}
+        &ndash; the &#8220;free web press&#8221; by{` `}
         <a
           href="https://atriskmedia.com/?utm_source=tractstack&utm_medium=www&utm_campaign=community"
           class="font-bold underline hover:text-black"
