--- a/templates/src/pages/storykeep/advanced.astro
+++ b/templates/src/pages/storykeep/advanced.astro
@@ -54,7 +54,7 @@ try {
 
 <Layout title={title} slug="storykeep" isStoryKeep={true}>
   <main id="main-content" class="min-h-screen w-full">
-    <div class="p-8">
+    <div class="max-w-5xl p-8">
       <StoryKeepDashboard
         client:only="react"
         fullContentMap={fullContentMap}
