--- a/templates/src/pages/storykeep/branding.astro
+++ b/templates/src/pages/storykeep/branding.astro
@@ -43,7 +43,7 @@ try {
 
 <Layout title={title} slug="storykeep" isStoryKeep={true}>
   <main id="main-content" class="min-h-screen w-full">
-    <div class="p-8">
+    <div class="max-w-5xl p-8">
       <BrandingPageWrapper
         client:only="react"
         fullContentMap={fullContentMap}
