--- a/templates/src/pages/storykeep.astro
+++ b/templates/src/pages/storykeep.astro
@@ -52,7 +52,7 @@ try {
 
 <Layout title={title} isStoryKeep={true} slug="storykeep">
   <main id="main-content" class="min-h-screen w-full">
-    <div class="p-3.5 md:p-8">
+    <div class="max-w-5xl p-3.5 md:p-8">
       <StoryKeepDashboard
         client:only="react"
         fullContentMap={fullContentMap}
