--- a/templates/src/pages/storykeep/content.astro
+++ b/templates/src/pages/storykeep/content.astro
@@ -50,7 +50,7 @@ try {
 
 <Layout title={title} slug="storykeep" isStoryKeep={true}>
   <main id="main-content" class="min-h-screen w-full">
-    <div class="max-w-5xl p-8">
+    <div class="max-w-5xl p-3.5 md:p-8">
       <StoryKeepDashboard
         client:only="react"
         fullContentMap={fullContentMap}
